@@ -6,8 +6,12 @@ synaptic (0.63.1ubuntu11) UNRELEASED; urgency=low
   
   [ Jean-Baptiste Lallement ]
   * port to libept 1.0
+  
+  [ Michael Vogt ]
+  * limit amount of calls to set_fraction() to avoid too high cpu
+    usage on nouveau
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 21 Jun 2010 13:46:42 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 09 Jul 2010 10:06:55 +0200
 
 synaptic (0.63.1ubuntu10) maverick; urgency=low
 
